--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
     font-family: "Segoe UI Variable Text", "Segoe UI";
     font-size: 14px;
     color: black;
+    user-select: none;
 }
 
 body {
