--- a/src/style.module.sass
+++ b/src/style.module.sass
@@ -108,10 +108,10 @@
         width: 0.7rem
         border-radius: 1em
         background: var(--slider-thumb-color)
-        box-shadow: 0 0 0 0.3rem var(--slider-thumb-border), 0 0.04rem 0.2rem 0 rgba(0, 0, 0, 0.6)
+        box-shadow: 0 0 0 0.3rem var(--slider-thumb-border), 0 0.04rem 0.1rem 0.3rem #0008
         transform: translateY(-0.2rem) scale(1)
         &:hover
-            box-shadow: 0 0 0 0.15rem var(--slider-thumb-border), 0 0.04rem 0.2rem 0 rgba(0, 0, 0, 0.6)
+            box-shadow: 0 0 0 0.15rem var(--slider-thumb-border), 0 0.04rem 0.1rem 0.15rem #0008
             transform: translateY(-0.2rem) scale(1.3)
         transition: box-shadow 0.15s, transform 0.15s
 
