--- a/src/style.module.sass
+++ b/src/style.module.sass
@@ -2,8 +2,12 @@
     display: inline-block
     font-family: "Segoe Fluent Icons", "Segoe MDL2 Assets"
     transform: scale(1.1) translateY(0.12em)
-    width: 1.1em
-    margin: 0 0.4em
+    [data-writing-mode=vertical-lr] &
+        transform: scale(1.1) translateX(0.06em)
+    [data-writing-mode=vertical-rl] &
+        transform: scale(1.1) translateX(-0.06em)
+    inline-size: 1.1em
+    margin-inline: 0.4rem
     text-align: center
 
 .resetSpacing
@@ -29,12 +33,12 @@
     @extend .resetInput
     cursor: pointer
     opacity: 0.7
-
     &:hover
         opacity: 1
 
 .borderlessNumber
     @extend .resetInput
+    text-align: center
     &::-webkit-inner-spin-button, &::-webkit-outer-spin-button
         @extend .resetAppearance
         margin: 0
@@ -69,9 +73,6 @@
 .stretchItems
     align-items: stretch
 
-.fillWidth
-    width: 100%
-
 .titleFont
     font-size: 1.1rem
     font-variation-settings: "wght" 350
@@ -80,8 +81,12 @@
     @extend .icon
     font-weight: 300
     transform: scale(1.6) translateY(0.12em)
-    width: 1.6em
-    margin: 0 0.6em
+    [data-writing-mode=vertical-lr] &
+        transform: scale(1.6) translateX(0.06em)
+    [data-writing-mode=vertical-rl] &
+        transform: scale(1.6) translateX(-0.06em)
+    inline-size: 1.6em
+    margin-inline: 0.6rem
 
 .cozyLine
     line-height: 2.2
@@ -93,10 +98,13 @@
     --slider-thumb-color: var(--accent-dark1)
     --slider-thumb-border: #ffffff
     --slider-track-color: #868686
+    --slider-end: right
     @media screen and (prefers-color-scheme: dark)
         --slider-thumb-color: var(--accent-light2)
         --slider-thumb-border: #414141
         --slider-track-color: #9b9b9b
+    [data-writing-mode^=vertical] &
+        --slider-end: top
 
     @extend .resetInput
     margin: 0.15rem
@@ -110,13 +118,21 @@
         background: var(--slider-thumb-color)
         box-shadow: 0 0 0 0.3rem var(--slider-thumb-border), 0 0.04rem 0.1rem 0.3rem #0008
         transform: translateY(-0.2rem) scale(1)
+        [data-writing-mode=vertical-lr] &
+            transform: translateX(-0.2rem) scale(1)
+        [data-writing-mode=vertical-rl] &
+            transform: translateX(0.2rem) scale(1)
         &:hover
             box-shadow: 0 0 0 0.15rem var(--slider-thumb-border), 0 0.04rem 0.1rem 0.15rem #0008
             transform: translateY(-0.2rem) scale(1.3)
+            [data-writing-mode=vertical-lr] &
+                transform: translateX(-0.2rem) scale(1.3)
+            [data-writing-mode=vertical-rl] &
+                transform: translateX(0.2rem) scale(1.3)
         transition: box-shadow 0.15s, transform 0.15s
 
     &::-webkit-slider-runnable-track
         @extend .resetInput
-        background: linear-gradient(to right, var(--slider-thumb-color), var(--slider-thumb-color) var(--slider-value), var(--slider-track-color) var(--slider-value), var(--slider-track-color))
-        height: 0.3rem
+        background: linear-gradient(to var(--slider-end), var(--slider-thumb-color), var(--slider-thumb-color) var(--slider-value), var(--slider-track-color) var(--slider-value), var(--slider-track-color))
+        block-size: 0.3rem
         border-radius: 0.6rem
